--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -219,10 +219,10 @@
 <body>
     <div id="main-page">
         <div id="yt-masthead">
-            <a id="logo-container" href="https://www.youtube.com/" title="YouTube Home">
+            <a id="logo-container" href="/" title="YouTube Home">
                 <span class="logo" title="YouTube Home"></span>
             </a>
-            <form id="masthead-search" class="search-form" action="https://www.youtube.com/results">
+            <form id="masthead-search" class="search-form" action="/results" method="get">
                 <div id="masthead-search-terms-border" dir="ltr">
                     <input id="masthead-search-terms"
                            autocomplete="off"
