--- a/assets/html/frontend/watch.html
+++ b/assets/html/frontend/watch.html
@@ -105,6 +105,7 @@ Loading...
         </div>
         <div class="controls">
           <button class="play-pause-btn">
+            <img class="loading-icon" src="/assets/images/loading.gif" alt="">
             <img class="play-icon" src="/assets/images/play.png" alt="Play">
             <img class="pause-icon" src="/assets/images/pause.png" alt="Pause">
           </button>
@@ -161,6 +162,13 @@ Loading...
               <option value="480">480p</option>
               <option value="720">720p</option>
               <option value="1080">1080p</option>
+            </select>
+          </div>
+          <div class="settings-row">
+            <span class="settings-label">Codec</span>
+            <select class="settings-codec" id="settings-codec">
+              <option value="" selected>Standard</option>
+              <option value="mpeg4">MPEG4</option>
             </select>
           </div>
         </div>
