--- a/assets/html/frontend/embed.html
+++ b/assets/html/frontend/embed.html
@@ -20,6 +20,7 @@
       </div>
       <div class="controls">
         <button class="play-pause-btn">
+          <img class="loading-icon" src="/assets/images/loading.gif" alt="">
           <img class="play-icon" src="/assets/images/play.png" alt="Play">
           <img class="pause-icon" src="/assets/images/pause.png" alt="Pause">
         </button>
@@ -76,6 +77,13 @@
             <option value="480">480p</option>
             <option value="720">720p</option>
             <option value="1080">1080p</option>
+          </select>
+        </div>
+        <div class="settings-row">
+          <span class="settings-label">Codec</span>
+          <select class="settings-codec" id="settings-codec">
+            <option value="" selected>Standard</option>
+            <option value="mpeg4">MPEG4</option>
           </select>
         </div>
       </div>
